added indicator element for active entities
using border slants for pure-CSS arrow head:
http://www.infimum.dk/HTML/slantinfo.html

I'm not entirely convinced this is useful. However, it is part of the
original design document, and should be easy to revert if necessary.

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,7 +98,18 @@ body {
 }
 
 .listing .active a {
+	position: relative;  /* required for child's abspos */
 	border-right: none;
+}
+
+.listing .active .indicator {
+	position: absolute;
+	right: 0;
+	width: 0;
+	height: 0;
+	border-width: 0.5em 0 0.5em 0.5em; /* XXX: inacurrate; does not scale!? */
+	border-style: solid;
+	border-color: transparent transparent transparent #FFF;
 }
 
 /* formatting */
